@@ -3,6 +3,8 @@ amaroK ChangeLog
 (c) 2002-2004 the amaroK authors.
 
 
+  CHG: Songs you click in ContextBrowser will now directly start to play and won't
+       be added to the playlist, if they already are there.
   FIX: "Start Scan" menu-entry gets disabled while scanning. (BR 81619).
   FIX: Directories with non-ascii chars don't get scanned (CB) in multibyte locales.
   CHG: Enhanced "Fill-Down" feature for track column (auto-increment) (BR 81194).
